Set width and height attributes for <img> if image is loaded from srcset

For device with high DPR, the image could be loaded from srcset. When
the img element is serialized, srcset attribute is skipped. We need to
set width and height attributes to retain the original size of the
image.

BUG=674999
TEST=new tests added

Review-Url: https://codereview.chromium.org/2624953002
Cr-Commit-Position: refs/heads/master@{#443058}

Former-commit-id: a908d62ac9640cc8e9e54521c8ab8133919ef24a